--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -11,6 +11,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Cooldown.Camouflage",DevComment="")
 +GameplayTagList=(Tag="Ability.Cooldown.DamageUOp",DevComment="")
 +GameplayTagList=(Tag="Ability.Cooldown.Lightning",DevComment="")
++GameplayTagList=(Tag="Ability.Cooldown.Poison",DevComment="")
 +GameplayTagList=(Tag="Ability.Cooldown.SkullBreak",DevComment="")
 +GameplayTagList=(Tag="Ability.Death",DevComment="")
 +GameplayTagList=(Tag="Ability.DoubleJump",DevComment="GASCompanion: Example map required gameplay tag registered by LaunchPad")
@@ -18,6 +19,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Jump",DevComment="GASCompanion: Example map required gameplay tag registered by LaunchPad")
 +GameplayTagList=(Tag="Ability.JumpSmall",DevComment="GASCompanion: Example map required gameplay tag registered by LaunchPad")
 +GameplayTagList=(Tag="Ability.Melee",DevComment="GASCompanion: Example map required gameplay tag registered by LaunchPad")
++GameplayTagList=(Tag="Ability.slash",DevComment="")
 +GameplayTagList=(Tag="Cooldown.Ability.Blink",DevComment="GASCompanion: Example map required gameplay tag registered by LaunchPad")
 +GameplayTagList=(Tag="Cooldown.Ability.ConeDamage",DevComment="")
 +GameplayTagList=(Tag="Cooldown.Ability.DoubleJump",DevComment="GASCompanion: Example map required gameplay tag registered by LaunchPad")
