--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -98,3 +98,6 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/PlayFabCommon.PlayFabRuntimeSettings]
+TitleId=BCEEB
+
