SET DemonstrationMap As Default

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Demo/Maps/CustomHUD_Map.CustomHUD_Map
-EditorStartupMap=/Game/Demo/Maps/CustomHUD_Map.CustomHUD_Map
+GameDefaultMap=/Game/Demo/Maps/Demonstration.Demonstration
+EditorStartupMap=/Game/Demo/Maps/Demonstration.Demonstration
 GameInstanceClass=/Game/Demo/Examples/CustomHUD/BP_GameInstance.BP_GameInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
