Update Game Instance Init Game

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Demo/Maps/Demonstration.Demonstration
-EditorStartupMap=/Game/Demo/Maps/Demonstration.Demonstration
+GameDefaultMap=/Game/Maps/StartupMap.StartupMap
+EditorStartupMap=/Game/Maps/StartupMap.StartupMap
 GameInstanceClass=/Game/GameCore/GameInstance/GI_GameInstance.GI_GameInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
