--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -292,8 +292,8 @@ bEnableUniversalAPK=True
 bBundleABISplit=True
 bBundleLanguageSplit=True
 bBundleDensitySplit=True
-ExtraApplicationSettings=android:name="com.google.android.gms.ads.APPLICATION_ID" \n android:value="ca-app-pub-9172535445214914~9516532400"
-ExtraActivitySettings=
+ExtraApplicationSettings=
+ExtraActivitySettings=<meta-data android:name="com.google.android.gms.ads.APPLICATION_ID" android:value="ca-app-pub-9172535445214914~9516532400"/>
 +ExtraPermissions=android.permission.READ_INTERNAL_STORAGE
 +ExtraPermissions=android.permission.WRITE_INTERNAL_STORAGE
 +ExtraPermissions=android.permission.READ_EXTERNAL_STORAGE
