--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -259,11 +259,11 @@ bGeneratedSYMFile=True
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.YourCompany.BettaTest2
-StoreVersion=6
+StoreVersion=7
 StoreVersionOffsetArm64=0
 StoreVersionOffsetX8664=0
-ApplicationDisplayName=
-VersionDisplayName=1.6
+ApplicationDisplayName=Infinitos
+VersionDisplayName=1.7
 MinSDKVersion=26
 TargetSDKVersion=33
 InstallLocation=Auto
