--- a/ProjectA.uproject
+++ b/ProjectA.uproject
@@ -50,10 +50,6 @@
 			]
 		},
 		{
-			"Name": "TestGF",
-			"Enabled": true
-		},
-		{
 			"Name": "KantanDocGen",
 			"Enabled": false
 		},
@@ -86,6 +82,11 @@
 			"Name": "FirebaseFeatures",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/81111c9d88144ab0968fd8953872a3d8"
+		},
+		{
+			"Name": "ProjectCleaner",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/4d7f5dc837fc4b009bb91e678adf9fd0"
 		}
 	],
 	"TargetPlatforms": [
