--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -16,12 +16,12 @@ bPreventGlobalDataInitialization=True
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=Always
-BuildConfiguration=PPBC_Development
+BuildConfiguration=PPBC_Shipping
 BuildTarget=
 LaunchOnTarget=
 StagingDirectory=(Path="C:/dev/UnrealProjects/GASCompanionDemo/Builds")
-FullRebuild=False
-ForDistribution=False
+FullRebuild=True
+ForDistribution=True
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
