--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -276,7 +276,7 @@ bAllowLargeOBBFiles=False
 bAllowPatchOBBFile=False
 bAllowOverflowOBBFiles=False
 bUseExternalFilesDir=True
-bPublicLogFiles=True
+bPublicLogFiles=False
 Orientation=SensorLandscape
 MaxAspectRatio=2.100000
 bUseDisplayCutout=False
@@ -293,7 +293,7 @@ bBundleABISplit=True
 bBundleLanguageSplit=True
 bBundleDensitySplit=True
 ExtraApplicationSettings=
-ExtraActivitySettings=<meta-data android:name="com.google.android.gms.ads.APPLICATION_ID" android:value="ca-app-pub-9172535445214914~9516532400"/>
+ExtraActivitySettings=
 +ExtraPermissions=android.permission.READ_INTERNAL_STORAGE
 +ExtraPermissions=android.permission.WRITE_INTERNAL_STORAGE
 +ExtraPermissions=android.permission.READ_EXTERNAL_STORAGE
@@ -373,4 +373,29 @@ bEnableDomStorage=False
 [/Script/GooglePADEditor.GooglePADRuntimeSettings]
 bEnablePlugin=True
 bOnlyShipping=True
+
+[/Script/FirebaseFeatures.FirebaseConfig]
+bEnableAuth=True
+bEnableFirestore=True
+bEnableDatabase=True
+bEnableAdMob=True
+bEnableAnalytics=True
+bEnableFunctions=True
+bEnableMessaging=True
+bEnableRemoteConfig=True
+bEnableStorage=True
+bEnableCrashlytics=True
+bEnablePerformances=True
+FirebaseAnalyticsSessionTimeoutDuration=1800
+bSuppressNotificationPermissionPrompt=False
+bTokenRegistrationOnInit=True
+bEnableGoogleSignIn=False
+GoogleReversedClientId=
+bEnableGooglePlayGamesSignIn=False
+Host=
+bSslEnabled=True
+bPersistenceEnabled=False
+bRequestReadPhoneStatePermission=True
+bRequestAccessCoarseLocation=True
+bFirebaseAppStoreReceiptURLCheckEnabled=True
 
