--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/StartupMap.StartupMap
+EditorStartupMap=/Game/Maps/PG_Alpha_S.PG_Alpha_S
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -7,8 +7,8 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Game/GameCore/GameInstance/GI_GameInstance.GI_GameInstance_C
-GameDefaultMap=/Game/Maps/StartupMap.StartupMap
+GameInstanceClass=/Game/GameCore/GameInstance/GI_ChunkDownloader.GI_ChunkDownloader_C
+GameDefaultMap=/Game/Maps/ChunkTestingMaps/PG_Alpha_S_Entry.PG_Alpha_S_Entry
 ServerDefaultMap=None
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
