--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -30,7 +30,7 @@ UsePakFile=True
 bUseIoStore=False
 bUseZenStore=False
 bMakeBinaryConfig=False
-bGenerateChunks=False
+bGenerateChunks=True
 bGenerateNoChunks=False
 bChunkHardReferencesOnly=False
 bForceOneChunkPerFile=False
