--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -258,7 +258,7 @@ AdMobEnabled=True
 bGeneratedSYMFile=True
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-PackageName=com.YourCompany.BettaTest2
+PackageName=com.MarkazStudios.Infinitos
 StoreVersion=7
 StoreVersionOffsetArm64=0
 StoreVersionOffsetX8664=0
