--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -15,7 +15,7 @@ bPreventGlobalDataInitialization=True
 +GameplayCueNotifyPaths=/Game/Demo/Examples/Combo/AbilitySystem
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-Build=IfProjectHasCode
+Build=Always
 BuildConfiguration=PPBC_Shipping
 BuildTarget=GASCompanionDemo
 LaunchOnTarget=
