--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -12,8 +12,10 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Cooldown.DamageUOp",DevComment="")
 +GameplayTagList=(Tag="Ability.Cooldown.FireSlash",DevComment="")
 +GameplayTagList=(Tag="Ability.Cooldown.Lightning",DevComment="")
++GameplayTagList=(Tag="Ability.Cooldown.MineField",DevComment="")
 +GameplayTagList=(Tag="Ability.Cooldown.Poison",DevComment="")
 +GameplayTagList=(Tag="Ability.Cooldown.SkullBreak",DevComment="")
++GameplayTagList=(Tag="Ability.Cooldown.Slash",DevComment="")
 +GameplayTagList=(Tag="Ability.Death",DevComment="")
 +GameplayTagList=(Tag="Ability.DoubleJump",DevComment="GASCompanion: Example map required gameplay tag registered by LaunchPad")
 +GameplayTagList=(Tag="Ability.HitReact",DevComment="")
