--- a/ProjectA.uproject
+++ b/ProjectA.uproject
@@ -102,6 +102,10 @@
 			"Name": "LowEntryExtStdLib",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/846c2ad08f164f45b0335ecebf85361e"
+		},
+		{
+			"Name": "ChunkDownloader",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
