--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -63,7 +63,7 @@ InternationalizationPreset=English
 +CulturesToStage=en
 LocalizationTargetCatchAllChunkId=0
 bCookAll=False
-bCookMapsOnly=False
+bCookMapsOnly=True
 bSkipEditorContent=False
 bSkipMovies=False
 -IniKeyDenylist=KeyStorePassword
